# ac-pcap-parser

./: .gitignore  CHECKS  CLAUDE.md  Cargo.toml  Dockerfile  OPCODE_FILTERING.md  PLAN.txt  README.md  exp.jsonl  fragments.json  messages.json  our.jsonl  our_output.json  result.js
.github/workflows/: ci.yml  deploy.yml  docker.yml  release.yml
conf/: nginx.conf
crates/app/: Cargo.toml  build.rs
crates/app/src/: lib.rs
crates/app/src/ui/: detail_panel.rs  file_panel.rs  packet_list.rs  weenie_panel.rs
crates/bot/src/: bot.rs  discord.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: filter.rs  main.rs  tui.rs
crates/common/: Cargo.toml
crates/common/examples/: parse_packet.rs
crates/common/src/: lib.rs  packet_flags.rs
crates/common/src/messages/: mod.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/lib/src/messages/: mod.rs
crates/lib/src/protocol/: mod.rs
crates/lib/tests/: filter_tests.rs
crates/parser/: Cargo.toml
crates/parser/examples/: debug_msg.rs  find_pantaloons.rs
crates/parser/src/: lib.rs  packet.rs  properties.rs  reader.rs
crates/parser/src/messages/: c2s.rs  mod.rs  s2c.rs
crates/parser/src/messages/c2s/: mod.rs
crates/parser/src/messages/c2s/actions/: character.rs  inventory.rs  item.rs
crates/parser/src/messages/s2c/: mod.rs  qualities.rs
crates/parser/src/messages/s2c/events/: character.rs  item.rs  magic.rs
crates/parser/src/properties/: enum_names.rs  highlight_masks.rs  mod.rs  profiles.rs  property_names.rs  readers.rs
crates/parser/tests/: filter_tests.rs
crates/web/: Cargo.toml  build.sh  index.html
crates/web-server/: Cargo.toml
crates/web-server/src/: discord.rs  main.rs
crates/web/src/: filter.rs  lib.rs  state.rs  time_scrubber.rs
crates/web/src/ui/: file_panel.rs  mod.rs  packet_list.rs
crates/xtask/src/: main.rs
src/: fragment.rs  main.rs  message.rs  properties.rs  reader.rs
src/messages/: c2s.rs  mod.rs  s2c.rs
