[package]
name = "app"
version.workspace = true
edition.workspace = true
description = "UI for Asheron's Call PCAP parser (web and desktop)"

[lib]
crate-type = ["cdylib", "rlib"]

# Desktop binary (requires --features desktop)
[[bin]]
name = "ac-pcap-viewer"
path = "src/bin/desktop.rs"
required-features = ["desktop"]

[features]
default = []
desktop = ["rfd", "env_logger"]

[dependencies]
lib = { path = "../lib" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_json_tree = "0.7"
log = "0.4"
hex = "0.4"
base64 = "0.22"

# Web-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlBodyElement",
    "DragEvent",
    "DataTransfer",
    "FileList",
    "File",
    "FileReader",
    "Blob",
    "Request",
    "RequestInit",
    "Response",
    "Location",
    "Url",
    "UrlSearchParams",
    "CssStyleDeclaration",
    "Event",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

# Desktop-specific dependencies (optional, enabled by "desktop" feature)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { version = "0.15", optional = true }
env_logger = { version = "0.11", optional = true }
